# Cacaio-docker

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: app.py  data.py  functions.py  server.py  ui.py
scripts/: setup.sh
