[project]
name = "meu-shiny-app"
version = "1.0.0"
description = "Dashboard Shiny em Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Caio Mussatto", email = "caio.mussatto@gmail.com"},
]


dependencies = [

    "shiny==1.5.0",
    "shinychat==0.2.8",
    "pandas==2.2.2",
    "numpy==2.0.2",
    "scipy==1.16.2",
    "scikit-learn==1.6.1",
    "plotly",  
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "gseapy==1.1.10",
    "harmonypy==0.0.10",
    "dcor==0.6",
    "networkx==3.5",
    "uvicorn[standard]==0.37.0",
    "python-dotenv==1.0.0",
    "numba==0.62.1",
    "joblib==1.5.2",
    "antlr-denter==1.3.1",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "automata-lib==9.1.2",
    "cached_method==0.1.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "frozendict==2.4.6",
    "h11==0.16.0",
    "htmltools==0.6.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "linkify-it-py==2.0.3",
    "llvmlite==0.45.1",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "narwhals==2.6.0",
    "orjson==3.11.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt_toolkit==3.0.52",
    "pydot==4.0.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "questionary==2.1.1",
    "requests==2.32.5",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]

[project.scripts]
start = "app:main"          
dev = "app:run_dev"         

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
